tests/ui/field_projections/send.next.stderr
error: impls of auto traits for field representing types not supported
  --> $DIR/send.rs:13:1
   |
LL | unsafe impl Send for field_of!(Bar, bar_field) {}
   | ^^^^^^^^^^^^----^^^^^-------------------------^^^
   |             |        |
   |             |        field representing type
   |             auto trait

error[E0277]: `field_of!(Foo, field)` cannot be sent between threads safely
  --> $DIR/send.rs:20:15
   |
LL |     is_send::<field_of!(Foo, field)>();
   |               ^^^^^^^^^^^^^^^^^^^^^ `field_of!(Foo, field)` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `field_of!(Foo, field)`
   = help: the trait `Send` is implemented for `field_of!(Bar, bar_field)`
note: required by a bound in `is_send`
  --> $DIR/send.rs:16:15
   |
LL | fn is_send<T: Send>() {}
   |               ^^^^ required by this bound in `is_send`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
